hphp/test/slow/compilation/cyclic-inheritance.php.expectf
Fatal error: unknown class C in %s/cyclic-inheritance.php on line 3
